--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "WARNING16": "button at the bottom of this file.",
             "WARNING17": "*********************************************************************************",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/CollatzConjectureApp.dll",
+            "program": "${workspaceFolder}/MathConjectures/bin/Debug/netcoreapp3.1/CollatzConjectureApp.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
